--- a/data/2023kedd.bib
+++ b/data/2023kedd.bib
@@ -1,6 +1,6 @@
-@inproceedings{luo2023towards,
+@article{luo2023towards,
 	title		= "Towards Unified AI Drug Discovery with Multiple Knowledge Modalities",
 	author		= "Luo, Yizhen and Liu, Xing Yi and Yang, Kai and Huang, Kui and Hong, Massimo and Zhang, Jiahuan and Wu, Yushuai and Nie, Zaiqing",
-	booktitle	= "In review",
+	journal={arXiv preprint arXiv:2305.01523},
 	year		= "2023"
 }
